force-app/main/default/objects/Debt_Capital_Market__c.object
<CustomObject>
    <label>Debt Capital Market</label>
    <nameField>
        <label>Borrower Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Tenor__c</fullName>
        <label>Tenor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secured__c</fullName>
        <label>Secured</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_MN__c</fullName>
        <label>Amount (mn)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <label>Guarantor</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranche_Type__c</fullName>
        <label>Tranche Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_Type__c</fullName>
        <label>Repayment Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Purpose__c</fullName>
        <label>Primary Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Tier_Arranger__c</fullName>
        <label>Top Tier Arranger</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Rate_Margin_BPS__c</fullName>
        <label>Base Rate &amp; Margin (bps)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Industry_Group__c</fullName>
        <label>Major Industry Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Converted_USD_MN__c</fullName>
        <label>Amount Converted (USD mn)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Laos</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Laos</value>
        </filters>
        <label>Laos</label>
    </listViews>
    <listViews>
        <fullName>Vietnam</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <label>Vietnam</label>
    </listViews>
    <listViews>
        <fullName>Malaysia</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Malaysia</value>
        </filters>
        <label>Malaysia</label>
    </listViews>
    <listViews>
        <fullName>Hong_Kong</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Hong Kong</value>
        </filters>
        <label>Hong Kong</label>
    </listViews>
    <listViews>
        <fullName>Singapore</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Singapore</value>
        </filters>
        <label>Singapore</label>
    </listViews>
    <listViews>
        <fullName>Philippines</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Major_Industry_Group__c</columns>
        <columns>Tranche_Type__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_MN__c</columns>
        <columns>Base_Rate_Margin_BPS__c</columns>
        <columns>Top_Tier_Arranger__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Secured__c</columns>
        <columns>Repayment_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Philippines</value>
        </filters>
        <label>Philippines</label>
    </listViews>
</CustomObject>